RESOLVED FIXED41227
activeTexture wrongly generates error with legal input.
https://bugs.webkit.org/show_bug.cgi?id=41227
Summary activeTexture wrongly generates error with legal input.
Zhenyao Mo
Reported 2010-06-25 14:24:49 PDT
Only TEXTURE0 succeeds at the moment.
Attachments
patch (7.83 KB, patch)
2010-06-25 14:29 PDT, Zhenyao Mo
no flags
revised patch: remove "chrome author" text from the test (7.58 KB, patch)
2010-06-25 14:34 PDT, Zhenyao Mo
no flags
Zhenyao Mo
Comment 1 2010-06-25 14:29:20 PDT
Zhenyao Mo
Comment 2 2010-06-25 14:34:54 PDT
Created attachment 59798 [details] revised patch: remove "chrome author" text from the test
Kenneth Russell
Comment 3 2010-06-25 17:37:36 PDT
Comment on attachment 59798 [details] revised patch: remove "chrome author" text from the test Looks good.
Dimitri Glazkov (Google)
Comment 4 2010-06-25 19:54:41 PDT
Comment on attachment 59798 [details] revised patch: remove "chrome author" text from the test ok.
WebKit Commit Bot
Comment 5 2010-06-26 00:10:47 PDT
Comment on attachment 59798 [details] revised patch: remove "chrome author" text from the test Clearing flags on attachment: 59798 Committed r61949: <http://trac.webkit.org/changeset/61949>
WebKit Commit Bot
Comment 6 2010-06-26 00:10:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.