2010-06-25  Zhenyao Mo  <zmo@google.com>

Reviewed by Dimitri Glazkov.

        activeTexture wrongly generates error with legal input.
        https://bugs.webkit.org/show_bug.cgi?id=41227

        * fast/canvas/webgl/texture-active-bind-expected.txt: Added.
        * fast/canvas/webgl/texture-active-bind.html: Added.
2010-06-25  Zhenyao Mo  <zmo@google.com>

        Reviewed by Dimitri Glazkov.

        activeTexture wrongly generates error with legal input.
        https://bugs.webkit.org/show_bug.cgi?id=41227

        Test: fast/canvas/webgl/texture-active-bind.html

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::activeTexture): Fix the upper limit test for test units.

Canonical link: https://commits.webkit.org/52929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61949 268f45cc-cd09-0410-ab3c-d52691b4dbfc